--- a/web/.env_defaults
+++ b/web/.env_defaults
@@ -1,7 +1,7 @@
 # Create your .env based on this
 
 SECRET_KEY="your-django-secret-key" # qjo$sns*vn-mdv$0yyijjr8vx-b3krjvmr(*+#z6iz@4c#ji+^
-DEBUG="True"
+DEBUG="False"
 ALLOWED_HOSTS="website.com,127.0.0.1,localhost"   # make sure it has no space. separate with comma
 DJANGO_LOG_LEVEL="ERROR"
 SECRET_ADMIN_PATH=""   # set your secret admin path. final admin path will be (SECRET_ADMIN_PATH+"admin") if nothing provided then path will be ("admin")
